--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
   <title>Narutole</title>
 </head>
 <body>
+  <div id="vidasRestantes"></div>
+  <div id="container"></div>
+  <div id="ganaste"></div>
   <script src="script.js"></script>
 </body>
 </html>
