--- a/index.html
+++ b/index.html
@@ -7,9 +7,10 @@
   <title>Narutole</title>
 </head>
 <body>
-  <div id="vidasRestantes"></div>
-  <div id="container"></div>
-  <div id="ganaste"></div>
+  <div id="intentosRes"></div>
+  <input type="text" id="inputUs">
+  <div id="erroresUs"></div>
+  <div id="mensajeFinal"></div>
   <script src="script.js"></script>
 </body>
 </html>
