--- a/index.html
+++ b/index.html
@@ -4,13 +4,38 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <!-- CSS only -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
+  <link rel="stylesheet" href="style.css">
   <title>Narutole</title>
 </head>
 <body>
-  <div id="intentosRes"></div>
-  <input type="text" id="inputUs">
-  <div id="erroresUs"></div>
-  <div id="mensajeFinal"></div>
+    <div class="container">
+      <h1 class="titulo">NARUTOLE</h1>
+      <div class="intentos-restantes">
+        <h3 id="intentosRes">intentos : <span id="totalIntentos">0</span> de 8</h3>
+      </div>
+    <div class="container-input">
+      <input type="text" id="inputUs" placeholder="Ingrese un personaje de Naruto" class="input-us">
+      <button id="clickUs" class="boton-us" onclick="intentosClick(-1)">Enviar</button>
+    </div>
+      <div id="erroresUs" class="errores-us"></div>
+      <div id="divTabla" class="tabla">
+        <table>
+          <thead>
+            <tr>
+              <th>Aldea</th>
+              <th>Jutsu</th>
+              <th>Nivel</th>
+            </tr>
+          </thead>
+          <tbody id="tablaRespuesta">
+          
+          </tbody>
+        </table>  
+      </div>
+  </div>
+  <div id="mensajeFinal" class="mensaje-fin"></div>
   <script src="script.js"></script>
 </body>
 </html>
