--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div class="container">
       <h1 class="titulo">NARUTOLE</h1>
       <div class="intentos-restantes">
-        <h3 id="intentosRes">intentos : <span id="totalIntentos">0</span> de 8</h3>
+        <h3>intentos : <span id="totalIntentos">8</span></h3>
       </div>
     <div class="container-input">
       <input type="text" id="inputUs" placeholder="Ingrese un personaje de Naruto" class="input-us">
