--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
       </div>
     <div class="container-input">
       <input type="text" id="inputUs" placeholder="Ingrese un personaje de Naruto" class="input-us">
-      <button id="clickUs" class="boton-us" onclick="intentosClick(-1)">Enviar</button>
-      <button id="resetear"class="boton-reset" >Reset</button>
+      <button id="clickUs"  class="button-game" onclick="intentosClick(-1)">Enviar</button>
+      <button id="resetear" class="button-game" >Reset</button>
     </div>
       <div id="erroresUs" class="errores-us"></div>
       <div id="divTabla" class="tabla">
