--- a/index.html
+++ b/index.html
@@ -19,6 +19,9 @@
       <input type="text" id="inputUs" placeholder="Ingrese un personaje de Naruto" class="input-us">
       <button id="clickUs"  class="button-game" onclick="intentosClick(-1)">Enviar</button>
       <button id="resetear" class="button-game" >Reset</button>
+      <div>
+        <ul  id="listaFiltro" class="filtro"></ul>
+      </div>
     </div>
       <div id="erroresUs" class="errores-us"></div>
       <div id="divTabla" class="tabla">
