--- a/index.html
+++ b/index.html
@@ -18,10 +18,19 @@
     <div class="container-input">
       <input type="text" id="inputUs" placeholder="Ingrese un personaje de Naruto" class="input-us">
       <button id="clickUs"  class="button-game" onclick="intentosClick(-1)">Enviar</button>
-      <button id="resetear" class="button-game" >Reset</button>
-      <div>
-        <ul  id="listaFiltro" class="filtro"></ul>
-      </div>
+      <table>
+        <tbody class="filtro">
+          <tr>
+            <td>naruto</td>
+          </tr>
+          <tr>
+            <td>sasuke</td>
+          </tr>
+          <tr>
+            <td>sakura</td>
+          </tr>
+        </tbody>
+      </table>
     </div>
       <div id="erroresUs" class="errores-us"></div>
       <div id="divTabla" class="tabla">
