--- a/index.html
+++ b/index.html
@@ -24,10 +24,31 @@
             <td>naruto</td>
           </tr>
           <tr>
+            <td>sakura</td>
+          </tr>
+          <tr>
             <td>sasuke</td>
           </tr>
           <tr>
-            <td>sakura</td>
+            <td>kakashi</td>
+          </tr>
+          <tr>
+            <td>gaara</td>
+          </tr>
+          <tr>
+            <td>kankurou</td>
+          </tr>
+          <tr>
+            <td>temari</td>
+          </tr>
+          <tr>
+            <td>baki</td>
+          </tr>
+          <tr>
+            <td>rock lee</td>
+          </tr>
+          <tr>
+            <td>guy</td>
           </tr>
         </tbody>
       </table>
