--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
         <h3>intentos : <span id="totalIntentos">8</span></h3>
       </div>
     <div class="container-input">
-      <input type="text" id="inputUs" placeholder="Ingrese un personaje de Naruto" class="input-us">
+      <input type="text" id="inputUs" placeholder="Ingrese un personaje..." class="input-us">
       <button id="clickUs"  class="button-game" onclick="intentosClick(-1)">Enviar</button>
-      <table>
-        <tbody class="filtro">
+      <table  class="filtro">
+        <tbody>
           <tr>
             <td>naruto</td>
           </tr>
