--- a/index.html
+++ b/index.html
@@ -20,34 +20,34 @@
       <button id="clickUs"  class="button-game" onclick="intentosClick(-1)">Enviar</button>
       <table class="tablaFiltrada">
         <tbody class="filtro">
-          <tr>
+          <tr class="display">
             <td>naruto</td>
           </tr>
-          <tr>
+          <tr class="display">
             <td>sakura</td>
           </tr>
-          <tr>
+          <tr class="display">
             <td>sasuke</td>
           </tr>
-          <tr>
+          <tr class="display">
             <td>kakashi</td>
           </tr>
-          <tr>
+          <tr class="display">
             <td>gaara</td>
           </tr>
-          <tr>
+          <tr class="display">
             <td>kankurou</td>
           </tr>
-          <tr>
+          <tr class="display">
             <td>temari</td>
           </tr>
-          <tr>
+          <tr class="display">
             <td>baki</td>
           </tr>
-          <tr>
+          <tr class="display">
             <td>rock lee</td>
           </tr>
-          <tr>
+          <tr class="display">
             <td>guy</td>
           </tr>
         </tbody>
